# hackathon-bpk-2026

./: .dockerignore  .env.example  COMO_RODAR.md  CONTEXT.md  Dockerfile  README.md  compose.override.yaml  compose.yaml  docker-compose.yml  jirabot.bot  requirements.txt  setup_teams.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
data/: user_mapping.json
docs/: problema.md
docs/backend/: architecture.md  teams-to-backend.md
manifest/: manifest.json
src/: config.py  main.py
src/adapters/: teams.py
src/cache/: conversational.py  jira_cache.py
src/formatting/: responses.py
src/identity/: resolver.py
src/jira/: client.py  models.py
src/nlu/: agent.py  keyword_fallback.py  tools.py
src/observability/: logging_config.py
src/rules/: authorization.py
static/: index.html
tests/: test_authorization.py  test_identity.py
