[project]
name = "nome-projeto"
version = "0.0.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.135.1",
    "sqlalchemy[asyncio]==2.0.47",
    "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
